[project]
name = "storm-toolkit"
version = "0.1.0"
description = "Typhoon tracking toolkit powered by zoom.earth data."
authors = [{ name = "Lanseria", email = "zhangchao564265135@hotmail.com" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "requests>=2.32.0",
    "python-dotenv>=1.1.1",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/storm_toolkit"]
